--- a/SCSS/Theme Rewrite/plugins-core/_metadata.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_metadata.scss
@@ -19,6 +19,7 @@ body {
 }
 
 //Styling
+.metadata-properties-heading { display: block; }
 .metadata-properties-title {
     font-size: var(--metadata-title-size);
     color: var(--metadata-title-color);
